# xrsight-iiswc-artifact

./: .gitignore  .gitmodules  README.md  download_images.sh  monitor-exp1.sh  monitor-exp2.sh  monitor-exp3.sh  monitor-vio-gemmini.sh  monitor-vio-generic.sh  monitor-vio-saturn.sh  parse.py  parse_vio.py  parse_vio_full.py  parse_vio_saturn_only.py  setup-exp1.sh  setup-exp2.sh  setup-exp3.sh  setup-vio-gemmini.sh  setup-vio-generic.sh
ILLIXR/: CMakeLists.txt  poses.csv  ritnet-fused.onnx  tester.py
ILLIXR/cmake/: ConfigurationSummary.cmake  FindCUDNN.cmake  Findonnxruntime.cmake
ILLIXR/include/illixr/: data_format.hpp  eye_tracking_host.hpp  runtime.hpp
ILLIXR/plugins/: plugins.yaml
ILLIXR/plugins/eye_tracking_host/: CMakeLists.txt  plugin.cpp
ILLIXR/plugins/headless_native_renderer/: CMakeLists.txt  README.md  plugin.cpp
ILLIXR/plugins/headless_timewarp_vk/: CMakeLists.txt  plugin.cpp
ILLIXR/plugins/headless_vk/: CMakeLists.txt  README.md  plugin.cpp
ILLIXR/profiles/: gpu_offload.yaml  headless_vk.yaml
ILLIXR/src/: plugin.cpp  runtime_impl.cpp  sqlite_record_logger.hpp
firesim-settings/: config_build_recipes.yaml  config_hwdb.yaml
firesim-settings/et-scalar/: config_runtime.yaml  ubuntu-base.json
firesim-settings/ov-gemm/: config_runtime.yaml  ubuntu-base.json
firesim-settings/ov-gtsam-gemm/: ubuntu-base.json
firesim-settings/vio-gemmini/: config_runtime.yaml  ubuntu-base.json
firesim-settings/vio-saturn/: config_runtime.yaml
screen_dumps/: vio_generic.txt  vio_saturn.txt
xrsight-chipyard/: .gitmodules  build.sbt
(+22 files in other folders)
